# superglue_apply

superglue/models/: supergluenet.py  superpointnet.py
superglue_cpp/: CMakeLists.txt
superglue_cpp/cmake/: CMakeCPack.cmake  superglueConfig.cmake  superglueConfig.cmake.in  superpointConfig.cmake
superglue_cpp/config/: superglue.yaml  superpoint.yaml
superglue_cpp/examples/: CMakeLists.txt  superglue_test.cpp  superpoint_test.cpp
superglue_cpp/include/: config.h  config.h.in  superglue.h  superpoint.h
superglue_cpp/src/: superglue.cpp  superpoint.cpp
test_exported_superglue/: CMakeLists.txt
test_exported_superglue/src/: test.cpp
